# Finetune-OpenAI-for-iMKG-WikiData-Knowledge-Graph

./: .gitignore  README.md  constants.py  finetune.py  inference.ipynb  model.py  pyproject.toml
